--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /citasMedicas/nbproject/private/
 /citasMedicas/build/
 /citasMedicas/dist/
+/ListaArchivos/nbproject/private/
+/ListaArchivos/build/
